--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "node-sass": "^4.11.0",
     "open-color": "^1.6.3",
     "react": "^16.8.4",
