--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.11.0",
     "open-color": "^1.6.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
