--- a/blog/blog-frontend/package.json
+++ b/blog/blog-frontend/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "immutable": "^4.0.0-rc.12",
+    "include-media": "^1.4.9",
+    "node-sass": "^4.12.0",
+    "open-color": "^1.6.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
