--- a/blog/blog-frontend/package.json
+++ b/blog/blog-frontend/package.json
@@ -9,9 +9,11 @@
     "immutable": "^4.0.0-rc.12",
     "include-media": "^1.4.9",
     "marked": "^0.6.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "open-color": "^1.6.3",
     "prismjs": "^1.16.0",
+    "query-string": "5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -19,7 +21,8 @@
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
-    "redux-pender": "^2.0.12"
+    "redux-pender": "^2.0.12",
+    "remove-markdown": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://localhost:4000"
+  "proxy": "http://localhost:4000/"
 }
